gccida/g2/copy_insn_list
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/copy_insn_list/src/integrate.c:1798:4: error: expected ';' after expression
rtx v20; // r15 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/copy_insn_list/src/integrate.c:1798:5: error: use of undeclared identifier 'v20'; did you mean 'v10'?
rtx v20; // r15 
    ^~~
    v10
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/copy_insn_list/src/integrate.c:1788:9: note: 'v10' declared here
__int64 v10; // rdi 
        ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/copy_insn_list/src/integrate.c:1811:4: error: expected ';' after expression
rtx v33; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/copy_insn_list/src/integrate.c:1811:5: error: use of undeclared identifier 'v33'
rtx v33; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/copy_insn_list/src/integrate.c:1813:4: error: expected ';' after expression
rtx v35; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/copy_insn_list/src/integrate.c:1813:5: error: use of undeclared identifier 'v35'
rtx v35; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/copy_insn_list/src/integrate.c:1827:4: error: expected ';' after expression
rtx v49; // r15 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/copy_insn_list/src/integrate.c:1827:5: error: use of undeclared identifier 'v49'
rtx v49; // r15 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/copy_insn_list/src/integrate.c:1830:4: error: expected ';' after expression
rtx v52; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/copy_insn_list/src/integrate.c:1830:5: error: use of undeclared identifier 'v52'
rtx v52; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/copy_insn_list/src/integrate.c:1832:4: error: expected ';' after expression
rtx sequence[3]; // [rsp+10h] [rbp-58h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/copy_insn_list/src/integrate.c:1832:5: error: use of undeclared identifier 'sequence'
rtx sequence[3]; // [rsp+10h] [rbp-58h] 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/copy_insn_list/src/integrate.c:1845:1: error: use of undeclared identifier 'v20'
v20 = 0LL; 
^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/copy_insn_list/src/integrate.c:1846:27: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v21 = (  struct rtx_def *)v3[2]; 
                          ^~~~~
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/copy_insn_list/src/integrate.c:1851:1: error: use of undeclared identifier 'v20'
v20 = ( rtx)v3[2]; 
^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/copy_insn_list/src/integrate.c:1855:20: error: use of undeclared identifier 'v20'
if ( ( *( _DWORD *)v20->fld[0].rtwint & 0x4000FFFF) != 1073741885 ) 
                   ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/copy_insn_list/src/integrate.c:1858:31: error: expected expression
if ( volatile_refs_p( *( rtx *)&v20[1]) ) 
                              ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/copy_insn_list/src/integrate.c:1858:33: error: use of undeclared identifier 'v20'
if ( volatile_refs_p( *( rtx *)&v20[1]) ) 
                                ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/copy_insn_list/src/integrate.c:1863:6: error: use of undeclared identifier 'v49'
|| ( v49 = ( rtx)rtx[2], *( _WORD *)v49 != 47) && ( v49 = single_set_2( rtx, *( rtx *)&rtx[2])) == 0LL ) 
     ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/copy_insn_list/src/obj/integrate.o] Error 1
